--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 
 <body>
 
+  <div id="container">
+        <span id="question">What is your favorite server side language?</span>
+        <div><span>0</span><a href="">Vote</a>PHP</div>
+        <div><span>0</span><a href="">Vote</a>Ruby</div>
+        <div><span>0</span><a href="">Vote</a>Java</div>
+        <div><span>0</span><a href="">Vote</a>ASP</div>
+        <div><span>0</span><a href="">Vote</a>Perl</div>
+        <div><span>0</span><a href="">Vote</a>ColdFusion</div>
+    </div>
+
   <section id="contact">
 		<div class="overlay">
 			<div class="containers">
