--- a/index.html
+++ b/index.html
@@ -10,50 +10,59 @@
 <body>
 
   <div id="container">
-        <span id="question">What is your favorite server side language?</span>
-        <div><span>0</span><a href="">Vote</a>PHP</div>
-        <div><span>0</span><a href="">Vote</a>Ruby</div>
-        <div><span>0</span><a href="">Vote</a>Java</div>
-        <div><span>0</span><a href="">Vote</a>ASP</div>
-        <div><span>0</span><a href="">Vote</a>Perl</div>
-        <div><span>0</span><a href="">Vote</a>ColdFusion</div>
-    </div>
+    <span id="question">What is your favorite server side language?</span>
+    <div><span>0</span><a href="">Vote</a>PHP</div>
+    <div><span>0</span><a href="">Vote</a>Ruby</div>
+    <div><span>0</span><a href="">Vote</a>Java</div>
+    <div><span>0</span><a href="">Vote</a>ASP</div>
+    <div><span>0</span><a href="">Vote</a>Perl</div>
+    <div><span>0</span><a href="">Vote</a>ColdFusion</div>
+  </div>
 
   <section id="contact">
-		<div class="overlay">
-			<div class="containers">
-				<h2>get in touch...</h2>
+    <div class="overlay">
+      <div class="containers">
+        <h2>get in touch...</h2>
 
-				<div id="container">
-					<div class="menu_btn">
-						<button class="dd_btn" data-name="dd_1">Facebook page</button>
-						<div class="dd dd_1">
-							<a href="javascript:void(0)">Stewart ilondanga</a>
-						</div><!--end dd_1-->
-					</div><!--end button-->
-					<div class="menu_btn">
-						<button class="dd_btn" data-name="dd_2">Twitter</button>
-						<div class="dd dd_2">
-							<a href="javascript:void(0)">@stew_ilondanga</a>
-					</div><!--end dd_1-->
-					</div><!--end button-->
-					<div class="menu_btn">
-						<button class="dd_btn" data-name="dd_3">Email</button>
-						<div class="dd dd_3">
-							<a href="javascript:void(0)">stemiisa@yahoo.com</a>
-							<a href="javascript:void(0)">stilondanga@gmail.com</a>
-							<a href="javascript:void(0)">stewilondanga@hotmail.com</a>
-						</div><!--end dd_1-->
-					</div><!--end button-->
-					<div class="menu_btn">
-						<button class="dd_btn" data-name="dd_4">Instagram</button>
-						<div class="dd dd_4">
-							<a href="javascript:void(0)">@stew_ilondanga</a>
-						</div><!--end dd_1-->
-					</div><!--end button-->
-				</div><!--end container-->
+        <div id="container">
+          <div class="menu_btn">
+            <button class="dd_btn" data-name="dd_1">Facebook page</button>
+            <div class="dd dd_1">
+              <a href="javascript:void(0)">Stewart ilondanga</a>
+            </div>
+            <!--end dd_1-->
+          </div>
+          <!--end button-->
+          <div class="menu_btn">
+            <button class="dd_btn" data-name="dd_2">Twitter</button>
+            <div class="dd dd_2">
+              <a href="javascript:void(0)">@stew_ilondanga</a>
+            </div>
+            <!--end dd_1-->
+          </div>
+          <!--end button-->
+          <div class="menu_btn">
+            <button class="dd_btn" data-name="dd_3">Email</button>
+            <div class="dd dd_3">
+              <a href="javascript:void(0)">stemiisa@yahoo.com</a>
+              <a href="javascript:void(0)">stilondanga@gmail.com</a>
+              <a href="javascript:void(0)">stewilondanga@hotmail.com</a>
+            </div>
+            <!--end dd_1-->
+          </div>
+          <!--end button-->
+          <div class="menu_btn">
+            <button class="dd_btn" data-name="dd_4">Instagram</button>
+            <div class="dd dd_4">
+              <a href="javascript:void(0)">@stew_ilondanga</a>
+            </div>
+            <!--end dd_1-->
+          </div>
+          <!--end button-->
+        </div>
+        <!--end container-->
 
-<h1>Created by Stewart ilondanga
+        <h1>Created by Stewart ilondanga
 <script>
 with(new Date)c=-new Date(y=getFullYear(),m=getMonth()).getDay(x=new Date(y,++m,0).getDate(b=-1))
 h='<table class="cal"><caption> Copyright '+' '+y+'/'+m+'<tr>'+'SuMoTuWeThFrSa'.replace(/(..)/g,'<th>$1')
@@ -61,9 +70,9 @@ while((b++>5?b=0:b)|c<x)h+=(b?'':'<tr>')+'<td>'+(++c<1|c>x?'-':c);document.write
 </script>
 </h1>
 
-			</div>
-		</div>
-	</section>
+      </div>
+    </div>
+  </section>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
