--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div><span>0</span><a href="">Vote</a>Ruby</div>
     <div><span>0</span><a href="">Vote</a>Java</div>
     <div><span>0</span><a href="">Vote</a>ASP</div>
-    <div><span>0</span><a href="">Vote</a>Perl</div>
+    <div><span>0</span><a href="">Vote</a>Python</div>
     <div><span>0</span><a href="">Vote</a>ColdFusion</div>
   </div>
 
